[gd_scene load_steps=7 format=3 uid="uid://dpgrdlq0lyetm"]

[ext_resource type="Texture2D" uid="uid://blprxfikjj1g0" path="res://sprites/ui/finals.png" id="1_0xyf0"]
[ext_resource type="Script" path="res://scripts/Finals.gd" id="1_mhxoc"]
[ext_resource type="EventAsset" uid="uid://bn73jubky80nr" path="res://addons/FMOD/editor/resources/events/{c6c438a9-66fb-4e79-81a1-5bf3b889ea50}.tres" id="3_4lsby"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s8id8"]
atlas = ExtResource("1_0xyf0")
region = Rect2(0, 0, 400, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_iud7w"]
atlas = ExtResource("1_0xyf0")
region = Rect2(400, 0, 400, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_c34us"]
atlas = ExtResource("1_0xyf0")
region = Rect2(800, 0, 400, 300)

[node name="Finals" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhxoc")

[node name="BadEnding" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_s8id8")

[node name="NormalEnding" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_iud7w")

[node name="PerfectEnding" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_c34us")

[node name="StudioEventEmitter2D" type="StudioEventEmitter2D" parent="."]
play_event = 2
stop_event = 3
event = ExtResource("3_4lsby")
parameter_musicState = 3.0
